--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="utf-8">
     <title>Delex Bets</title>
   </head>
+  <style media="screen">
+    html {
+      width: 100%;
+      height: 100%;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+      color: #FFFFFF;
+    }
+    body {
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      margin: 0;
+      background-color: #323436;
+    }
+    div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+    img {
+      border-radius: 100%;
+    }
+    @media screen and (max-width: 320px) {
+      img {
+        width: 90%;
+      }
+    }
+  </style>
   <body>
-    <h1>EM BREVE!</h1>
-    <img src="assets/delex-da-sorte.jpeg" alt="delex-da-sorte">
-    <p>AGUARDEM</p>
+    <div>
+      <h1>EM BREVE!</h1>
+      <img src="assets/delex-da-sorte.jpeg" alt="delex-da-sorte">
+      <p>AGUARDEM</p>
+    </div>
   </body>
 </html>
